# MAESTRO

./: .env.dist  .gitignore  .pre-commit-config.yaml  README.md  clearml.conf  clearml.conf.dist  main.py  pyproject.toml  ruff.toml
conf/: data.py  datasets.py  experiment.py  hydra_conf.py  mask.py  model.py  opt.py  run.py  utils.py
conf/dataset/: __init__.py  flair.py  pastis_hd.py  s2_naip.py  treesatai_ts.py  utils.py
maestro/: hydra_utils.py  run_experiment.py
maestro/baselines/: base.py  croma.py  dinov2.py  dofa.py  prithvi.py  satmae.py
maestro/conf/: __init__.py  datasets.py  experiment.py  mask.py  model.py  trainer.py  utils.py
maestro/conf/dataset/: flair.py  pastis_hd.py  s2_naip.py  treesatai_ts.py
maestro/dataset/: __init__.py  dataset.py  flair.py  pastis_hd.py  s2_naip.py  treesatai_ts.py  utils.py
maestro/layers/: embed.py  head.py  overlay.py  utils.py
maestro/ssl/: __init__.py  mae.py  mim.py
maestro/train/: __init__.py  base.py  baseline.py  data.py  logger.py  model.py  trainer.py
ssl_models/: __init__.py  run_experiment.py
ssl_models/baselines/: __init__.py  base.py  croma.py  dinov2.py  dofa.py  utils.py
ssl_models/dataset/: dataset.py  flair.py  osm_to_seg.py  pastis_hd.py  treesatai_ts.py  utils.py
ssl_models/layers/: __init__.py  embed.py  head.py  mask.py  utils.py
ssl_models/ssl/: mae.py  mim.py
ssl_models/train/: base.py  baseline.py  data.py  logger.py  metric.py  model.py  trainer.py
tests/: __init__.py  conftest.py  test_data.py  test_mae.py  test_model.py
tests/data/: test.csv  train.csv  val.csv
tests/data/aerial/: Betula_spec._1_15679_WEFL_NLF.tif  Betula_spec._5_17172_WEFL_NLF.tif  Betula_spec._9_19083_WEFL_NLF.tif  Quercus_robur_3_86918_WEFL_NLF.tif  Quercus_robur_7_85750_WEFL_NLF.tif  Quercus_robur_7_86717_WEFL_NLF.tif
tests/data/sentinel-ts/: Betula_spec._1_15679_WEFL_NLF_2019.h5  Betula_spec._5_17172_WEFL_NLF_2017.h5  Betula_spec._9_19083_WEFL_NLF_2017.h5  Quercus_robur_3_86918_WEFL_NLF_2019.h5  (+2 more)
